# rodoltte_frontend

./: README.md  app.py  pyproject.toml  ventas_reales_poblacion_final.csv
